# Synapse

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  CONTRIBUTING.md  DEMO_SCRIPT.md  GOALPOST_TESTS_REPORT.md  H22_PREPAREDNESS_REPORT.md  INVENTORY.md  LATENCY_PLAN.md  LICENSE  PATENTS  README.md  README_SAFE_EXEC.md  SAFE_EXEC_SPEC.md  SPEC.md  SYNAPSE_RELEASE_WEEK.md  SYNAPSE_RULEBOOK.md  TONE.md  _benchmark_api.py  _benchmark_latency.py  _start_api_server.py  audit_panel.py  build_protected.py  close_the_loop_synapse.py  g6_check.py  install.py  mcp_server.py  mcp_tools_cops.py  mcp_tools_memory.py  mcp_tools_render.py  mcp_tools_scene.py  mcp_tools_tops.py  mcp_tools_usd.py  mkdocs.yml  pyproject.toml  rebuild_all_hdas.py  rebuild_with_subhdas.py  (+4 more)
.claude/: cook_probe_cop.json  cook_probe_dop.json  cook_probe_lop.json  cook_probe_sop.json  flywheel_ctx_findings.json  flywheel_u1_findings.json  flywheel_u1_findings.md  flywheel_u5_findings.json  flywheel_u5_findings.md  settings.json  v6_track_brief.md
.claude/agents/: assayer.md  cartographer.md  crucible.md  h22-adjudicator.md  h22-docsurgeon.md  h22-forge.md  h22-gatewarden.md  h22-scribe.md  librarian.md  panel-design-warden.md  prospector.md  seam-hunter.md  sidefx-cto.md
.claude/design/: panel_v9_comp.html
.claude/hooks/: check-python.sh  guard-edit-targets.py  synapse_hooks_bridge.py
.claude/workflows/: h22-doc-scout.js  h22-drop-week.js  h22-ground-truth.js  h22-intake.js  h22-leg0.js  h22-port-wave.js  h22-probe-adjudicate.js  h22-relay.js  h22-reverify.js
.github/workflows/: ci.yml
.scout/: CODEBASE_SNAPSHOT.md
.synapse/: DO_NOT_FORCE_COPY.md  config.yaml  harness.py  hytest.py  ip_fence.yaml  memory.py  phantom_fence.yaml  scout.py  verify.py
.synapse/contracts/: docking-minimums.yaml  failure-trail.yaml  heartbeat-relocation.yaml  quarantine-dead-tree.yaml  theme-seed-tokens.yaml
.synapse/hooks/: fence.py  gate.py  session_start.py
FORGE_PRODUCTION/: SETUP.md
_solaris_fix/: SOLARIS_FIX_ORCHESTRATION.md  planner_solaris_fix.py  solaris_network_blueprint.md  system_prompt_solaris_patch.py
agent/: CLAUDE.md  SYNAPSE_AGENT_SDK_BLUEPRINT.md  requirements.txt  shared_state.py  spawner.py  synapse_agent.py  synapse_checkpoint.py  synapse_hooks.py  synapse_planner.py  synapse_tone.py  synapse_tools.py  synapse_ws.py
agents/: BRAINSTEM.md  CONDUCTOR.md  HANDS.md  INTEGRATOR.md  OBSERVER.md  SUBSTRATE.md
demo/: README.md  synapse_demo.hip
design/: generate_icons.py  rasterize_icons.py  synapse_styles.py  tokens.py
docs/: AMD_LIBRARY_CAPTURE.md  BENCHMARK_DESIGN.md  FORGE_SPEC_apex_verify_harness.md  FORGE_SPEC_execute_python_fix.md  H22_AGENT_HARNESS.md  H22_PHASE0_RECONCILIATION.md  H22_READINESS_REPORT.md  H22_inside_out_sdk_enhancements.md  H22_llm_support.md  HARDENING_RUN_2026-06-10.md  He2025_CONSISTENCY_AUDIT.md  L8_FREEZE_FIX_DESIGN.md  LATENCY_SOLARIS_REVIEW.md  MCP_COEXISTENCE.md  MCP_TOOL_CATALOG.md  MONETA_FOLLOWUPS.md  MONETA_SYNAPSE_HANDOFF_Mile2.md  MONETA_SYNAPSE_INTEGRATION_HARNESS.md  MONETA_SYNAPSE_SHIP_REPORT.md  PORT_WAVE_MANIFEST.md  PREFLIGHT_GATE.md  RFC_agent_usd_ledger.md  RFC_allocation_exposure_schema.md  SCENE_GROUNDING_CONTRACT.md  SCIENCE_HARNESS_LEDGER.md  SCIENCE_HARNESS_PHASE0A_SPEC.md  SCIENCE_apex_verify_run_2026-06-02.md  SOLARIS_FAST_FOLLOWS.md  SYNAPSE_3xs_HARDENING_HARNESS.md  SYNAPSE_COPERNICUS_EXPANSION.md  SYNAPSE_CTO_REMEDIATION_HARNESS_v1.md  SYNAPSE_CTO_REVIEW_2026-06-05.md  SYNAPSE_CTO_REVIEW_2026-06-09.md  SYNAPSE_H22_BOUNDARY.md  SYNAPSE_H22_GAP_BLUEPRINT.md  SYNAPSE_H22_PROOF_LEG_BLUEPRINT.md  SYNAPSE_H22_PROVIDER_APEX.md  SYNAPSE_HARDENING_PRD.md  SYNAPSE_MCP_SEAM_BLUEPRINT.md  SYNAPSE_MCP_SEAM_HARNESS_v1.md  (+39 more)
forge/: FORGE.md
harness/: CLAUDE.md  README.md  SPEC.md  SYNAPSE_HARNESS_LAUNCH.md  agent-settings.json  forge_evaluator_gate.py  run.ts  settings.proposed.json  tasks.json
host/: capture_perception_baseline.py  introspect_connectivity.py  introspect_context_capability.py  introspect_cook_api.py  introspect_cook_truth.py  introspect_nodetypes.py  introspect_runtime.py
retina/: __init__.py  events.py  exr_header.py  ingest.py  qc_profiles.py  qc_profiles.toml  requirements.txt  setup_venv.ps1  setup_venv.py  t0.py  t1.py
rulebook/: RULEBOOK.md  manifest.json  phantoms.json
scripts/: author_lop_knowledge_22.py  blackbox_mine.py  blackbox_recover.py  build_freeze_repro.py  build_semantic_index.py  extract_emitted_node_types.py  flywheel_review_context.py  flywheel_review_lop.py  flywheel_review_wiring.py  freeze_trace.py  h22_api_delta.py  h22_probe_candidates.py  harvest_lop_catalog.py  husk_spike.py  install_synapse_package.py  knowledge_baseline.py  mine_lop_knowledge.py  prewarm_xpu.py  probe_materiallinker_amd.py  rag_sync.py  refresh_knowledge.py  render_watch.ps1  rewire_assess.py  run_apex_verify.py  run_live_probes.py  scene_model_report.py  token_baseline.py  verify_compose_render.py
shared/: __init__.py  bridge.py  conductor_advisor.py  constants.py  evolution.py  router.py  types.py
spikes/: spike_0.py
tests/: _conformance.py  conftest.py  manual_e2e_forge.py  test_agent.py  test_agent_loop.py  test_agent_state.py  test_agent_usd_ledger.py  test_apex_provider_contract.py  test_apex_recipe_names.py  test_area4_observability.py  test_auth.py  test_autonomy_driver.py  test_autonomy_evaluator.py  test_autonomy_live_contract.py  test_autonomy_models.py  test_autonomy_planner.py  test_autonomy_predictor.py  test_autonomy_task_provenance.py  test_autonomy_validator.py  test_backfill.py  test_blackbox_recover.py  test_blast_radius.py  test_bridge_endpoint.py  test_bridge_endpoint_pid_probe.py  test_bridge_multiclient.py  test_camera_twins.py  test_capture.py  test_chat_panel.py  test_cognitive_boundary.py  test_compose_offmain_wp3.py  test_composition_validation.py  test_conductor_advisor.py  test_consent_timeout.py  test_cops.py  test_core.py  test_corpus_activate.py  test_corpus_encoding_conformance.py  test_corpus_lop_conformance.py  test_crypto.py  test_ctx_track.py  (+219 more)
(+764 files in other folders)
